<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Face + Hand</string>
    <string name="flip_camera">Flip camera</string>
    <string name="toggle_landmarks">Toggle landmarks</string>
    <string name="open_gallery">Open face gallery</string>
    <string name="recent_face">Recently seen face</string>
    <string name="open_framing_gallery">Open framing gallery</string>
    <string name="select_model">Select detector model</string>
    <string name="decoded_code">Decoded code</string>
</resources>
